# FerrumLang

./: CMakeLists.txt  Makefile  README.md
boostrap/: minimal_libc.c  start.s
docs/: architecture.md  contributing.md  language.md
include/: ast.h  codegen.h  common.h  ferror.h  lexer.h  parser.h  parser_concurrency.h
include/runtime/: io.h  memory.h  sys.h
src/compiler/: ast.c  codegen.c  common.c  ferror.c  lexer.c  main.c  parser.c  parser_concurrency.c
src/runtime/: io.c  io.h  memory.c  memory.h  sys.c  sys.h
